# agent-cli-framework

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: architecture.md
example/: Cargo.toml
example/src/: cli.rs  config.rs  error.rs  main.rs  output.rs
example/src/commands/: agent_info.rs  hello.rs  mod.rs  skill.rs  update.rs
example/tests/: agent_info_contract.rs  exit_code_contracts.rs  output_contracts.rs  robustness.rs
