[package]
name = "greeter"
version = "0.1.0"
edition = "2024"
description = "Minimal agent-friendly CLI example"
license = "MIT"
repository = "https://github.com/199-biotechnologies/agent-cli-framework"

[[bin]]
name = "greeter"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7"
owo-colors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2"] }
